--- a/research/notebooks/ModelPrototyping.ipynb
+++ b/research/notebooks/ModelPrototyping.ipynb
@@ -14,11 +14,16 @@
     "from PIL import Image\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from collections import OrderedDict\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from torch.utils.data import DataLoader\n",
     "\n",
-    "from torchvision import transforms"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import transforms\n",
+    "from torchsummary import summary\n",
+    "from torchview import draw_graph"
    ]
   },
   {
@@ -261,6 +266,92 @@
     "    \n",
     "    print(loader.dataset_details())\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the Encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderBlock(nn.Module):\n",
+    "    def __init__(self, in_channels = 3, out_channels = 64):\n",
+    "        super(EncoderBlock, self).__init__()\n",
+    "        \n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels\n",
+    "        self.kernel = 3\n",
+    "        self.stride = 1\n",
+    "        self.padding = 1\n",
+    "        \n",
+    "        self.layers = OrderedDict()\n",
+    "        self.encoder = self.block()\n",
+    "        \n",
+    "    def block(self):\n",
+    "        self.layers[\"conv\"] = nn.Conv2d(\n",
+    "            in_channels=self.in_channels, out_channels=self.out_channels, kernel_size=self.kernel, stride=self.stride, padding=self.padding)\n",
+    "        \n",
+    "        self.layers[\"relu\"] = nn.ReLU(inplace=True)\n",
+    "        \n",
+    "        self.layers[\"conv_1\"] = nn.Conv2d(\n",
+    "            in_channels=self.out_channels, out_channels=self.out_channels, kernel_size=self.kernel, stride=self.stride, padding=self.padding)\n",
+    "        \n",
+    "        self.layers[\"batch_norm\"] = nn.BatchNorm2d(\n",
+    "            num_features=self.out_channels)\n",
+    "        \n",
+    "        self.layers[\"relu_1\"] = nn.ReLU(inplace=True)\n",
+    "        \n",
+    "        self.layers[\"max_pool\"] = nn.MaxPool2d(kernel_size=(self.kernel//self.kernel)*2, stride=self.stride*2)\n",
+    "        \n",
+    "        return nn.Sequential(self.layers)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        if x is not None:\n",
+    "            return self.encoder(x)\n",
+    "        \n",
+    "        else:\n",
+    "            raise ValueError(\"The input must not be None.\".capitalize())\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def total_params(model = None):\n",
+    "        if model is not None:\n",
+    "            return sum(params.numel() for params in model.parameters())\n",
+    "        \n",
+    "        else:\n",
+    "            raise ValueError(\"The model must not be None.\".capitalize())\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    in_channels = 3\n",
+    "    out_channels = 64\n",
+    "    num_repetitive = 5\n",
+    "\n",
+    "    layers = []\n",
+    "\n",
+    "    for _ in range(num_repetitive):\n",
+    "        layers.append(EncoderBlock(in_channels=in_channels, out_channels=out_channels))\n",
+    "\n",
+    "        in_channels = out_channels\n",
+    "        out_channels *= 2\n",
+    "\n",
+    "    model = nn.Sequential(*layers)\n",
+    "\n",
+    "    print(EncoderBlock.total_params(model=model))\n",
+    "\n",
+    "    print(summary(model=model, input_size=(3, 128, 128)))\n",
+    "    \n",
+    "    config = params()\n",
+    "\n",
+    "    draw_graph(model=model, input_size=(1, 3, 256, 256)).visual_graph.render(\n",
+    "        filename=os.path.join(config[\"path\"][\"file_path\"], \"encoder_block\"), format=\"jpeg\")"
    ]
   },
   {
