decoder block is added in the notebook

--- a/research/notebooks/ModelPrototyping.ipynb
+++ b/research/notebooks/ModelPrototyping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,6 +352,183 @@
     "\n",
     "    draw_graph(model=model, input_size=(1, 3, 256, 256)).visual_graph.render(\n",
     "        filename=os.path.join(config[\"path\"][\"file_path\"], \"encoder_block\"), format=\"jpeg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the Decoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 256, 256])\n",
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "   ConvTranspose2d-1          [-1, 512, 16, 16]       2,097,664\n",
+      "            Conv2d-2          [-1, 512, 16, 16]       2,359,808\n",
+      "              ReLU-3          [-1, 512, 16, 16]               0\n",
+      "            Conv2d-4          [-1, 512, 16, 16]       2,359,808\n",
+      "       BatchNorm2d-5          [-1, 512, 16, 16]           1,024\n",
+      "              ReLU-6          [-1, 512, 16, 16]               0\n",
+      "      DecoderBlock-7          [-1, 512, 16, 16]               0\n",
+      "   ConvTranspose2d-8          [-1, 256, 32, 32]         524,544\n",
+      "            Conv2d-9          [-1, 256, 32, 32]         590,080\n",
+      "             ReLU-10          [-1, 256, 32, 32]               0\n",
+      "           Conv2d-11          [-1, 256, 32, 32]         590,080\n",
+      "      BatchNorm2d-12          [-1, 256, 32, 32]             512\n",
+      "             ReLU-13          [-1, 256, 32, 32]               0\n",
+      "     DecoderBlock-14          [-1, 256, 32, 32]               0\n",
+      "  ConvTranspose2d-15          [-1, 128, 64, 64]         131,200\n",
+      "           Conv2d-16          [-1, 128, 64, 64]         147,584\n",
+      "             ReLU-17          [-1, 128, 64, 64]               0\n",
+      "           Conv2d-18          [-1, 128, 64, 64]         147,584\n",
+      "      BatchNorm2d-19          [-1, 128, 64, 64]             256\n",
+      "             ReLU-20          [-1, 128, 64, 64]               0\n",
+      "     DecoderBlock-21          [-1, 128, 64, 64]               0\n",
+      "  ConvTranspose2d-22         [-1, 64, 128, 128]          32,832\n",
+      "           Conv2d-23         [-1, 64, 128, 128]          36,928\n",
+      "             ReLU-24         [-1, 64, 128, 128]               0\n",
+      "           Conv2d-25         [-1, 64, 128, 128]          36,928\n",
+      "      BatchNorm2d-26         [-1, 64, 128, 128]             128\n",
+      "             ReLU-27         [-1, 64, 128, 128]               0\n",
+      "     DecoderBlock-28         [-1, 64, 128, 128]               0\n",
+      "  ConvTranspose2d-29          [-1, 3, 256, 256]             771\n",
+      "             Tanh-30          [-1, 3, 256, 256]               0\n",
+      "     DecoderBlock-31          [-1, 3, 256, 256]               0\n",
+      "================================================================\n",
+      "Total params: 9,057,731\n",
+      "Trainable params: 9,057,731\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.25\n",
+      "Forward/backward pass size (MB): 109.50\n",
+      "Params size (MB): 34.55\n",
+      "Estimated Total Size (MB): 144.30\n",
+      "----------------------------------------------------------------\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DecoderBlock(nn.Module):\n",
+    "    def __init__(self, in_channels = 1024, out_channels = 512, is_last = False):\n",
+    "        super(DecoderBlock, self).__init__()\n",
+    "\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels\n",
+    "        self.is_last = is_last\n",
+    "        self.kernel = 2\n",
+    "        self.stride = 2\n",
+    "        self.padding = 0\n",
+    "\n",
+    "        self.layers = OrderedDict()\n",
+    "        self.decoder = self.block()\n",
+    "\n",
+    "    def block(self):\n",
+    "        self.layers[\"convTranspose\"] = nn.ConvTranspose2d(\n",
+    "            in_channels=self.in_channels,\n",
+    "            out_channels=self.out_channels,\n",
+    "            kernel_size=self.kernel,\n",
+    "            stride=self.stride,\n",
+    "            padding=self.padding,\n",
+    "        )\n",
+    "\n",
+    "        if self.is_last:\n",
+    "            self.layers[\"Tanh\"] = nn.Tanh()\n",
+    "        else:\n",
+    "            self.layers[\"conv\"] = nn.Conv2d(\n",
+    "                in_channels=self.out_channels,\n",
+    "                out_channels=self.out_channels,\n",
+    "                kernel_size=3,\n",
+    "                stride=1,\n",
+    "                padding=1,  # Changed to maintain spatial dimensions\n",
+    "            )\n",
+    "            self.layers[\"relu\"] = nn.ReLU(inplace=True)\n",
+    "\n",
+    "            self.layers[\"conv_1\"] = nn.Conv2d(\n",
+    "                in_channels=self.out_channels,\n",
+    "                out_channels=self.out_channels,\n",
+    "                kernel_size=3,\n",
+    "                stride=1,\n",
+    "                padding=1,  # Changed to maintain spatial dimensions\n",
+    "            )\n",
+    "            self.layers[\"batch_norm\"] = nn.BatchNorm2d(num_features=self.out_channels)\n",
+    "            self.layers[\"relu_1\"] = nn.ReLU(inplace=True)\n",
+    "\n",
+    "        return nn.Sequential(self.layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if x is not None:\n",
+    "            return self.decoder(x)\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"The input must not be None.\".capitalize())\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def total_params(model = None):\n",
+    "        if model is not None:\n",
+    "            return sum(params.numel() for params in model.parameters())\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"The model must not be None.\".capitalize())\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def model_architecture(model=None):\n",
+    "        config = params()\n",
+    "        if model is not None:\n",
+    "            if os.path.exists(config[\"path\"][\"file_path\"]):\n",
+    "\n",
+    "                draw_graph(\n",
+    "                    model=model, input_size=(1, 3, 256, 256)\n",
+    "                ).visual_graph.render(\n",
+    "                    filename=os.path.join(config[\"path\"][\"file_path\"], \"decoder_block\"),\n",
+    "                    format=\"jpg\",\n",
+    "                )\n",
+    "\n",
+    "            else:\n",
+    "                raise FileNotFoundError(\n",
+    "                    \"The processed data folder does not exist. Please check the path and try again.\"\n",
+    "                )\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"The model must not be None.\".capitalize())\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    in_channels = 1024\n",
+    "    out_channels = 512\n",
+    "    num_repetitive = 5\n",
+    "    \n",
+    "    layers = []\n",
+    "    \n",
+    "    for idx in range(num_repetitive):\n",
+    "        layers.append(DecoderBlock(\n",
+    "            in_channels=in_channels,\n",
+    "            out_channels= 3 if idx == num_repetitive - 1 else out_channels,\n",
+    "            is_last= True if idx == num_repetitive - 1 else False))\n",
+    "        \n",
+    "        in_channels = out_channels\n",
+    "        out_channels //= 2\n",
+    "        \n",
+    "    model = nn.Sequential(*layers)\n",
+    "    \n",
+    "    print(model(torch.randn(1, 1024, 8, 8)).size())\n",
+    "    \n",
+    "    print(summary(model=model, input_size=(1024, 8, 8)))\n",
+    "    \n",
+    "    print(DecoderBlock.total_params(model=model))\n",
+    "    \n",
+    "    DecoderBlock.model_architecture(model=model)"
    ]
   },
   {
