--- a/research/notebooks/ModelPrototyping.ipynb
+++ b/research/notebooks/ModelPrototyping.ipynb
@@ -479,11 +479,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the AutoEncoder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class AutoEncoder(nn.Module):\n",
+    "    def __init__(self, in_channels=3):\n",
+    "        super(AutoEncoder, self).__init__()\n",
+    "\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = 64\n",
+    "        self.num_repetitive = 5\n",
+    "\n",
+    "        self.layers = []\n",
+    "\n",
+    "        for _ in range(self.num_repetitive):\n",
+    "            self.layers.append(\n",
+    "                EncoderBlock(\n",
+    "                    in_channels=self.in_channels, out_channels=self.out_channels\n",
+    "                )\n",
+    "            )\n",
+    "            self.in_channels = self.out_channels\n",
+    "            self.out_channels *= 2\n",
+    "\n",
+    "        self.out_channels = self.in_channels // 2\n",
+    "\n",
+    "        for idx in range(self.num_repetitive):\n",
+    "            self.layers.append(\n",
+    "                DecoderBlock(\n",
+    "                    in_channels=self.in_channels,\n",
+    "                    out_channels=(\n",
+    "                        3 if idx == self.num_repetitive - 1 else self.out_channels\n",
+    "                    ),\n",
+    "                    is_last=True if idx == self.num_repetitive - 1 else False,\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "            self.in_channels = self.out_channels\n",
+    "            self.out_channels //= 2\n",
+    "\n",
+    "        self.model = nn.Sequential(*self.layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if x is not None:\n",
+    "            return self.model(x)\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"The input must not be None.\".capitalize())\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def total_params(model=None):\n",
+    "        if model is not None:\n",
+    "            return sum(params.numel() for params in model.parameters())\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"The model must not be None.\".capitalize())\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def model_architecture(model=None):\n",
+    "        config = params()\n",
+    "        if model is not None:\n",
+    "            if os.path.exists(config[\"path\"][\"file_path\"]):\n",
+    "\n",
+    "                draw_graph(\n",
+    "                    model=model, input_size=(1, 3, 256, 256)\n",
+    "                ).visual_graph.render(\n",
+    "                    filename=os.path.join(config[\"path\"][\"file_path\"], \"autoencoder\"),\n",
+    "                    format=\"jpg\",\n",
+    "                )\n",
+    "\n",
+    "            else:\n",
+    "                raise FileNotFoundError(\n",
+    "                    \"The processed data folder does not exist. Please check the path and try again.\"\n",
+    "                )\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"The model must not be None.\".capitalize())"
+   ]
   }
  ],
  "metadata": {
