helper code is added in the notebook

--- a/research/notebooks/ModelPrototyping.ipynb
+++ b/research/notebooks/ModelPrototyping.ipynb
@@ -564,6 +564,99 @@
     "        else:\n",
     "            raise ValueError(\"The model must not be None.\".capitalize())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Helper code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim\n",
+    "from torch.optim.lr_scheduler import StepLR\n",
+    "\n",
+    "def load_dataloader():\n",
+    "    config = params()\n",
+    "\n",
+    "    if os.path.exists(config[\"path\"][\"processed_path\"]):\n",
+    "        train_dataloader = load(\n",
+    "            filename=os.path.join(\n",
+    "                config[\"path\"][\"processed_path\"], \"train_dataloader.pth\"\n",
+    "            )\n",
+    "        )\n",
+    "        test_dataloader = load(\n",
+    "            filename=os.path.join(\n",
+    "                config[\"path\"][\"processed_path\"], \"test_dataloader.pth\"\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        return {\n",
+    "            \"train_dataloader\": train_dataloader,\n",
+    "            \"test_dataloader\": test_dataloader,\n",
+    "        }\n",
+    "\n",
+    "    else:\n",
+    "        raise Exception(\"Could not find the file\".capitalize())\n",
+    "\n",
+    "\n",
+    "def helpers(**kwargs):\n",
+    "    lr = kwargs[\"lr\"]\n",
+    "    adam = kwargs[\"adam\"]\n",
+    "    SGD = kwargs[\"SGD\"]\n",
+    "    lr_scheduler = kwargs[\"lr_scheduler\"]\n",
+    "\n",
+    "    config = params()\n",
+    "\n",
+    "    model = AutoEncoder(in_channels=3)\n",
+    "\n",
+    "    if adam:\n",
+    "        optimizer = optim.Adam(\n",
+    "            params=model.parameters(),\n",
+    "            lr=lr,\n",
+    "            betas=(config[\"model\"][\"beta1\"], config[\"model\"][\"beta2\"]),\n",
+    "        )\n",
+    "\n",
+    "        if lr_scheduler:\n",
+    "            scheduler = StepLR(\n",
+    "                optimizer=optimizer,\n",
+    "                step_size=config[\"model\"][\"step_size\"],\n",
+    "                gamma=config[\"model\"][\"gamma\"],\n",
+    "            )\n",
+    "\n",
+    "    elif SGD:\n",
+    "        optimizer = optim.SGD(\n",
+    "            params=model.parameters(),\n",
+    "            lr=lr,\n",
+    "            momentum=config[\"model\"][\"momentum\"],\n",
+    "        )\n",
+    "\n",
+    "        if lr_scheduler:\n",
+    "            scheduler = StepLR(\n",
+    "                optimizer=optimizer,\n",
+    "                step_size=config[\"model\"][\"step_size\"],\n",
+    "                gamma=[\"model\"][\"gamma\"],\n",
+    "            )\n",
+    "\n",
+    "    dataloader = load_dataloader()\n",
+    "\n",
+    "    return {\n",
+    "        \"model\": model,\n",
+    "        \"optimizer\": optimizer,\n",
+    "        \"scheduler\": scheduler,\n",
+    "        \"train_dataloader\": dataloader[\"train_dataloader\"],\n",
+    "        \"test_dataloader\": dataloader[\"test_dataloader\"],\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    helpers()"
+   ]
   }
  ],
  "metadata": {
